move zoom buttons into TimeLineWidget + fix alignment

--- a/guvnor-webapp-drools/src/main/java/org/drools/guvnor/client/simulation/resources/Simulation.css
+++ b/guvnor-webapp-drools/src/main/java/org/drools/guvnor/client/simulation/resources/Simulation.css
@@ -45,4 +45,8 @@
 .addStepButton {
 }
 
+.zoomButtonsPanel {
+    margin-left: 700px; /* TODO hard-coded relative to timeLineScrollPanelWidth */
+}
+
 
